--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
+body {
+  margin: 0;
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #141414f7;
+  color: white;
+  font-size: 17px;
+}
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* bg-[#6159CB] */
+@layer base { 
+  button {
+    @apply rounded border-0 bg-[red] hover:bg-[#fff] hover:text-[red] p-1 px-3 duration-300;
+  }
+  .title {
+    @apply text-[26px] sm:text-[30px];
+  }
+}
+
+@layer components {
+  .container {
+    @apply px-4 md:px-8 !mx-auto;
+  }
+}
+
+@layer utilities {
+  @variants responsive {
+    .no-scrollbar::-webkit-scrollbar {
+      width: 5px;
+    }
+    
+    .no-scrollbar::-webkit-scrollbar-thumb {
+      background-color: #36404A;
+    }
+    
+    .no-scrollbar::-webkit-scrollbar-track {
+      background-color: #36404A;
+    }
+  }
 }
